Fix navbar layout shift issue

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,7 @@ blockquote {
 
 .navbar-logo {
   height: calc(var(--navbar-height) - 1rem);
+  width: auto;
 }
 
 .navbar-sublinks {
